Fix layout issues on homepage

--- a/app/assets/stylesheets/layout/page_specific/_homepage.scss
+++ b/app/assets/stylesheets/layout/page_specific/_homepage.scss
@@ -7,7 +7,7 @@
 
   @include respond-to($mq-m) {
     @include column(6);
-    margin-bottom: $baseline-unit*4;
+    min-height:126px;
   }
 
   @include respond-to($mq-l) {
@@ -16,12 +16,15 @@
   }
 }
 
+.l-constrained.l-promos {
+  margin-bottom: $baseline-unit*2;
+}
+
 .l-homepage-promo {
   @include respond-to($mq-s) {
     @include column(6);
-    margin-bottom: $baseline-unit*4;
     margin-top: $baseline-unit*4;
-    min-height: 310px;
+    min-height: 325px;
   }
 
   @include respond-to($mq-m) {
